# FerroFlow

./: .gitmodules  Cargo.toml  README.md  ci-rust.sh  config.example.yml  diesel.toml  taplo.toml
.githooks/: pre-commit
.github/workflows/: rust.yml
migrations/2026-03-06-005113-0000_create_field_logs/: down.sql  up.sql
migrations/2026-03-06-005113-0000_create_sensor_logs/: down.sql  up.sql
migrations/2026-03-06-005113-0000_create_telemetry_logs/: down.sql
schemas/: mapping.schema.json
sequences/: _schema.json
src/: lib.rs  main.rs
src/can/: mod.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs  schema.rs  timescale_schema.rs
src/events/: mod.rs
src/nodes/: can_node.rs  heartbeat.rs  mapping.rs  mod.rs  node_manager.rs
src/sequence/: mod.rs  sequence_builder.rs  sequence_definition.rs  sequence_runner.rs  sequence_validation.rs
src/socket/: http.rs  mod.rs
tests/: common.rs  db_logging.rs  emulator.rs
tests/mapping/: example1.toml
tests/mapping/split/: engine.toml  fuel.toml
tests/sequences/: abort.toml  invalid_action_times.toml  invalid_global_times.toml  invalid_interpolation_interval.toml  invalid_step_times.toml  valid.toml  valid_hold.toml  valid_set_param.toml
