[package]
name = "ferro_flow"
version = "0.1.0"
edition = "2024"

[dependencies]
liquidcan = { path = "LiquidCAN/liquidcan_rust", package = "liquidcan_rust" }
socketcan = "3.5.0"
diesel = { version = "2.3", features = ["postgres", "chrono", "serde_json"] }
chrono = "0.4"
serde_json = "1.0"
anyhow = "1.0.102"
dashmap = "6.1.0"
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }

# Test-only helper binary dependencies (enabled via feature)
caps = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

[features]
# Enables the `ferroflow-vcan` helper binary used by integration tests.
# Keep this disabled for normal builds.
test-vcan = ["dep:caps", "dep:libc"]

[[bin]]
name = "ferroflow-vcan"
path = "src/bin/ferroflow-vcan.rs"
required-features = ["test-vcan"]

[dev-dependencies]
diesel_migrations = "2.3"
testcontainers = { version = "0.27", features = ["blocking"] }
